--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,17 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
+    "noFallthroughCasesInSwitch": true,
+
+    // Shadcn
+        "baseUrl": ".",
+        "paths": {
+          "@/*": [
+            "./src/*"
+          ]
+        }
+
+      },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
